# oz_03_collabo-005-BE

./: README.md  manage.py  pyproject.toml
bobpience/: manage.py
bobpience/bobpience/: asgi.py  settings.py  urls.py  wsgi.py
bobpience/food_tags/: apps.py
bobpience/fti_tests/: apps.py
bobpience/meeting_locations/: apps.py
bobpience_config/: asgi.py  local.py  prod.py  settings.py  urls.py  wsgi.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_ftitype_fti_image_url.py  0002_timecategory.py  0003_ftitype_relation.py  0004_rename_relation_ftitype_bad_relation_and_more.py  0005_ftitype_bad_reason_ftitype_good_reason.py
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_reviewcomment_review.py
common/: models.py  serializers.py  urls.py  views.py
foods/: admin.py  models.py  urls.py  utils.py  views.py
foods/migrations/: 0001_initial.py  0002_foodtag.py  (+3 more)
fti_tests/: admin.py  models.py  serializers.py  urls.py  views.py
likes/: admin.py  models.py  serializers.py  urls.py  views.py
meetings/: admin.py  community_views.py  members_views.py  models.py  serializers.py  urls.py  views.py
profiles/: serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
taste_tests/: apps.py  models.py
test_info/: admin.py  apps.py  fti_urls.py  models.py  serializers.py  tasteUrls.py  taste_urls.py  urls.py  views.py
test_questions/: admin.py  apps.py  models.py  serializers.py  views.py
test_results/: apps.py  models.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+33 files in other folders)
