[tool.poetry]
name = "bobpience"
version = "0.1.0"
description = ""
authors = ["NohSungwoo <shtjddn0817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
black = "^24.8.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
